<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HotOrNotViewController">
            <connections>
                <outlet property="personContainer" destination="zXp-e4-B1v" id="Gc1-dl-Ww8"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6I-7d-gV1">
                    <rect key="frame" x="50" y="560" width="128" height="128"/>
                    <animations/>
                    <accessibility key="accessibilityConfiguration" identifier="hotButton" label="hotButton"/>
                    <gestureRecognizers/>
                    <state key="normal" image="hot"/>
                    <connections>
                        <action selector="didPressHot:" destination="-1" eventType="touchUpInside" id="TgH-3S-I2V"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dyb-3k-a2S">
                    <rect key="frame" x="236" y="560" width="128" height="128"/>
                    <animations/>
                    <accessibility key="accessibilityConfiguration" identifier="notButton" label="notButton"/>
                    <state key="normal" image="not"/>
                    <connections>
                        <action selector="didPressNot:" destination="-1" eventType="touchUpInside" id="f5u-tu-Pih"/>
                    </connections>
                </button>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zXp-e4-B1v">
                    <rect key="frame" x="57" y="40" width="300" height="520"/>
                    <animations/>
                    <color key="backgroundColor" red="0.94117647409439087" green="0.93725490570068359" blue="0.93725490570068359" alpha="1" colorSpace="calibratedRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="personContainer" label="personContainer"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="300" id="Dcn-G6-FgG"/>
                        <constraint firstAttribute="height" constant="520" id="VNV-aR-z1O"/>
                    </constraints>
                </view>
            </subviews>
            <animations/>
            <color key="backgroundColor" red="0.94117647409439087" green="0.93725490570068359" blue="0.93725490570068359" alpha="1" colorSpace="calibratedRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="hotOrNotViewControllerView" label="hotOrNotViewControllerView"/>
            <gestureRecognizers/>
            <constraints>
                <constraint firstItem="zXp-e4-B1v" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="6u3-DR-Z3H"/>
                <constraint firstItem="dyb-3k-a2S" firstAttribute="top" secondItem="Y6I-7d-gV1" secondAttribute="top" id="DA8-HI-cog"/>
                <constraint firstAttribute="trailing" secondItem="dyb-3k-a2S" secondAttribute="trailing" constant="50" id="FO0-OJ-n6j"/>
                <constraint firstItem="zXp-e4-B1v" firstAttribute="bottom" secondItem="Y6I-7d-gV1" secondAttribute="top" id="Qat-at-wof"/>
                <constraint firstItem="zXp-e4-B1v" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="dkT-9O-kXU"/>
                <constraint firstItem="Y6I-7d-gV1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="50" id="mMU-HO-WOh"/>
            </constraints>
            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
            <connections>
                <outletCollection property="gestureRecognizers" destination="v8x-r1-b3q" appends="YES" id="sXT-TI-Gdw"/>
                <outletCollection property="gestureRecognizers" destination="5Ga-bC-eWK" appends="YES" id="LBb-wM-aYm"/>
            </connections>
            <point key="canvasLocation" x="339" y="363"/>
        </view>
        <swipeGestureRecognizer direction="left" id="v8x-r1-b3q">
            <connections>
                <action selector="swipeLeft:" destination="-1" id="nvZ-Q4-HcV"/>
            </connections>
        </swipeGestureRecognizer>
        <swipeGestureRecognizer direction="right" id="5Ga-bC-eWK">
            <connections>
                <action selector="swipeRight:" destination="-1" id="CpY-OU-Wyy"/>
            </connections>
        </swipeGestureRecognizer>
    </objects>
    <resources>
        <image name="hot" width="128" height="128"/>
        <image name="not" width="128" height="128"/>
    </resources>
</document>
